refreshes every 6 hours, overflowing of media objects fixed, but still working on animation

--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,6 @@ white = #FFFFFF;
 1. Event Structure
 2. Calendar
 3. Animations
-4. Slideshow Structure
-
 */
 
 /* Basic */
@@ -48,9 +46,21 @@ footer{
 .hidden{
   display: none;
 }
+.truncate {
+  width: auto;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.events .error{
+  padding-top: 10%;
+  font-size: 2.5em;
+}
 /* Event Structure */
 #eventsHidden{
   display: none;
+}
+#eventTiles{
+  padding-top: 2%;
 }
 .events{
   -webkit-box-shadow: 0px -10px 25px -10px rgba(0,0,0,0.75);
@@ -62,12 +72,15 @@ footer{
 }
 .events p{
   font-size: 1.2em;
+  margin: 0 0 5px;
 }
 .events h1{
   font-size: 2em;
 }
 .singleEvent{
-  min-height: 220px;
+  min-height: 200px;
+  max-height: 200px;
+  overflow: hidden;
 }
 .row-centered{
   text-align:center;
@@ -89,12 +102,27 @@ footer{
   -moz-box-shadow: 5px 5px 22px 1px rgba(0,0,0,0.75);
   box-shadow: 5px 5px 22px 1px rgba(0,0,0,0.75);
 }
+.media-body{
+  vertical-align: middle;
+  width: auto;
+}
 .media-object{
   max-width: 8em;
 }
-.eventName{
+h1.media-heading{
   color: #a4092a;
   font-weight: bold;
+}
+.media-left, .media-right, .media-body {
+  display: inline-block;
+}
+.media-left{
+  width: 40%;
+}
+.media-right{
+  width: 59%;
+  word-wrap: break-word;
+  max-height: inherit;
 }
 .eventDate{
   text-transform: uppercase;
@@ -106,7 +134,6 @@ footer{
   font-weight: normal;
 }
 .img-circle{
-  margin: 0 1em;
   border: gray 2px solid;
 }
 
@@ -142,8 +169,10 @@ table.calendar {
 /*Animations*/
 .grow{
   z-index: 9999;
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
+  min-width: 100% !important;
+  min-height: 100% !important;
   position: fixed;
   top: 0;
   left: 0;
